z-index for header reset to initial to allow creating fixed overlays from inside DOM

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,6 @@
 .root:not(.flat) {
   box-shadow: 0 2px 4px rgba(221, 213, 205, 0.85);
+  z-index: initial;
 }
 
 .brand {
