--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -29,7 +29,6 @@ h3 {
 .appContent {
   margin-top: 6.4rem;
   padding: 2.4rem 0;
-  z-index: 1;
   flex: 1;
 }
 
